# _engine

./: .gitignore  Cargo.toml  README.md  ci.mdc  ci.toml  config.toml  rust-toolchain.toml
ci/: Cargo.toml  README.md  ci.toml  ci规则.md  todo.md
ci/fixtures/broken_project/src/: mod.rs  wrong_name.rs
ci/fixtures/sample_project/src/: MyService_ServiceConfig.rs  mod.rs
ci/fixtures/sample_project/tests/: MyService.rs
ci/src/: checks.rs  config.rs  lib.rs  main.rs  parser.rs  report.rs  verbose.rs
ci/src/checker/: mod.rs  runner.rs  walker.rs
ci/src/checker/rules/: impl_file.rs  internal.rs  mod.rs  mod_rs.rs  naming.rs  tests_dir.rs  trait.rs
ci/src/config/: matcher.rs  mod.rs
ci/src/fixer/: apply.rs  mod.rs  suggest.rs  types.rs
ci/src/parser/: ast.rs  mod.rs  syn_parser.rs  trait.rs  tree_sitter_parser.rs
ci/src/report/: formatter.rs  mod.rs  types.rs
ci/tests/: impl_file_test.rs  naming_test.rs  parser_test.rs  test_utils.rs  tests_test.rs
ci/unit_tests/: fixer_test.rs  impl_file_test.rs  integration_test.rs  internal_test.rs  mod_rs_test.rs  naming_test.rs  parser_test.rs  tests_test.rs
crates/engine-app/: Cargo.toml
crates/engine-app/src/: AppRunnerTrait_AppRunner.rs  ApplicationHandler_AppRunner.rs  Default_AppConfig.rs  EngineTrait_Engine.rs  Inherent_AppRunner.rs  Inherent_Engine.rs  RunAppTrait_RunApp.rs  WinitAppRunnerHandler.rs  lib.rs  main.rs  schedule.rs  wasm_runtime.rs
crates/engine-app/src/plugins/: mod.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: camera.rs  config.rs  core.rs  lib.rs
crates/engine-core/src/app/: ApplicationHandler_EngineApp.rs  EngineRunnerTrait_EngineRunner.rs  engine_app.rs  mod.rs
crates/engine-core/src/ecs/: Default_Camera2D.rs  Default_Collider.rs  Default_RigidBody.rs  Default_Transform.rs  mod.rs
crates/engine-core/src/engine/: mod.rs  subsystem.rs
crates/engine-core/src/fs/: FileSystem_LocalFileSystem.rs  mod.rs
crates/engine-core/src/input/: InputStateExt_InputState.rs  KeyCodeExtractorTrait_KeyCodeExtractor.rs  mod.rs
crates/engine-core/src/platform/: Default_PlatformEventLoop.rs  WindowTrait_Window.rs  mod.rs
crates/engine-core/src/plugins/: mod.rs
crates/engine-core/src/resources/: AssetManagerExt_AssetManager.rs  mod.rs
crates/engine-events/: Cargo.toml
crates/engine-events/src/: DefaultEventWorldTrait_DefaultEventWorld.rs  Default_DefaultEventWorld.rs  EventContainer_TypedEventContainer.rs  EventSender_DefaultEventWorld.rs  EventWorld_Default.rs  EventWorld_DefaultEventWorld.rs  TypedEventContainerTrait_TypedEventContainer.rs  lib.rs
crates/engine-events/src/events/: Event_ButtonPressed.rs  Event_ButtonReleased.rs  Event_Collision.rs  Event_Despawned.rs  Event_MouseMoved.rs  Event_MouseWheel.rs  Event_Spawned.rs  collision.rs  input.rs  lifecycle.rs  mod.rs
crates/engine-physics/: Cargo.toml  todo.md
crates/engine-physics/src/: ColliderBuilderTrait_RapierColliderBuilder.rs  Default_PhysicsContext.rs  PhysicsContextTrait_PhysicsContext.rs  PhysicsWorldTrait_PhysicsWorld.rs  RigidBodyBuilderTrait_RapierRigidBodyBuilder.rs  lib.rs  physics_world.rs
crates/engine-physics/src/internal/: apply_external_forces_system.rs  init_physics_bodies_system.rs  step_physics_system.rs  sync_physics_to_transform_system.rs  sync_transform_to_physics_system.rs
crates/engine-physics/src/queries/: CollisionEventCollectorTrait.rs  CollisionEventCollectorTrait_Default.rs  OverlapQueryTrait.rs  OverlapQueryTrait_Default.rs  RaycastModuleTrait.rs  RaycastModuleTrait_Default.rs  mod.rs
crates/engine-physics/src/tests/: PhysicsContextTrait.rs
crates/engine-platform/: Cargo.toml
crates/engine-platform/src/: lib.rs
crates/engine-platform/src/config/: mod.rs
crates/engine-platform/src/input/: mod.rs  winit_input.rs
crates/engine-renderer/: Cargo.toml
crates/engine-renderer/examples/: clear_demo.rs  cube3d_demo.rs  ecs_scene_demo.rs  phase4_asset_demo.rs  physics_demo.rs  scene_demo.rs  triangle_demo.rs
crates/engine-renderer/src/: camera.rs  grid.rs  lib.rs
crates/engine-renderer/src/ecs/: mod.rs
crates/engine-renderer/src/graphics/: DirectLightTrait_DirectLight.rs  GpuPipeline_Generator.rs  GpuPipeline_Generator_Test.rs  GpuShader_Loader.rs  GpuShader_Loader_Test.rs  InstanceTrait_InstanceRaw.rs  MaterialLoaderTrait_MaterialLoader.rs  ModelLoaderTrait_ModelLoader.rs  PipelineGeneratorTrait_PipelineGenerator.rs  PointLightTrait_PointLight.rs  ShaderLoaderTrait_ShaderLoader.rs  TextureLoader_Texture.rs  VertexTrait_Vertex.rs  layouts.rs  mod.rs  pipeline_state.rs
crates/engine-renderer/src/loaders/: MaterialLoaderTrait_MaterialLoader.rs  ModelLoaderTrait_ModelLoader.rs  PipelineGeneratorTrait_PipelineGenerator.rs  ShaderLoaderTrait_ShaderLoader.rs  TextureLoader_Texture.rs  WorldLoader.rs  mod.rs
crates/engine-renderer/src/materials/: mod.rs
crates/engine-renderer/src/passes/: RenderPass_LinePass.rs  RenderPass_MeshForwardPass.rs  RenderPass_UiPass.rs  mod.rs
crates/engine-renderer/src/render_graph/: mod.rs
crates/engine-renderer/src/renderer/: InstanceColorMeshPipeline2D_InstanceColorMeshPipeline2DPipeline.rs  MainRenderer.rs  RendererTrait_MainRenderer.rs  SimpleMesh2DPass_draw.rs  SimpleMesh3DPass_draw.rs  SimpleMesh3D_CubeMesh.rs  SimpleMeshPipeline2D_SimpleMeshPipeline2DPipeline.rs  SurfaceContextNew_DefaultSurfaceContextNew.rs  SurfaceContextTrait_SurfaceContext.rs  SurfaceSizeHelperTrait_SurfaceSizeHelper.rs  WgpuConfigHelperTrait_WgpuConfigHelper.rs  mod.rs
crates/engine-renderer/src/ui/: EngineStatsUiTrait_EngineStatsUi.rs  GuiSystemTrait_GuiSystem.rs  mod.rs
crates/engine-renderer/src/uniforms/: CameraGpuUniformTrait_CameraGpuUniform.rs  LightGpuUniformTrait_LightGpuUniform.rs  mod.rs
crates/engine-renderer/tests/: clear_demo.rs  triangle_demo.rs
crates/engine-scene/: Cargo.toml
crates/engine-scene/src/: lib.rs
crates/engine-script/: Cargo.toml  README.md  TODO.md
crates/engine-script/src/: lib.rs  wasm_host.rs
crates/separate-inherent/: Cargo.toml
crates/separate-inherent/src/: lib.rs
crates/separate-inherent/tests/: macro_test.rs
(+41 files in other folders)
