# ToyEngine - 游戏引擎 Workspace
# 
# 不包含任何可直接运行的 binary/package，仅作为 crates 集合

[workspace]
members = [
    "crates/engine-core",
    "crates/engine-renderer",
    "crates/engine-app",
    "crates/engine-physics",
    "crates/engine-events",
    "crates/engine-scene",
    "crates/engine-platform",
    "crates/engine-script",
]
exclude = [
    "demos",
]
# 未来可以添加更多子 crate

[workspace.dependencies]
# 核心依赖
bevy_ecs = "0.18"
bevy = "0.18"  # 用于反射和类型注册
glam = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 平台层
winit = "0.30"
raw-window-handle = "0.6"
gilrs = "0.11"

# 图形
wgpu = "27"
naga = "27"

# 物理
rapier3d = { version = "0.32", features = ["simd-stable"] }
rapier2d = { version = "0.32", features = ["simd-stable"] }

# 音频
kira = "0.12"

# UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"

# 资源
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ron = "0.8"
image = "0.25"
gltf = "1.4"
ktx2 = "0.4"
ddsfile = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# 文件系统与热重载
notify = "6.1"
vfs = "0.12"

# 多线程
rayon = "1.10"
tokio = { version = "1.40", features = ["full"] }

# 性能分析
profiling = "1.0"
tracy-client = "0.18"

# 数据布局辅助
bytemuck = { version = "1.16", features = ["derive"] }

# 反射（如果需要）
bevy_reflect = { version = "0.18", features = ["glam"] }

# 事件系统（如果需要）
crossbeam-channel = "0.5"

# WASM 运行时（脚本系统）
wasmtime = "22.0"
wasm-bindgen = "0.2"
wasmer = "4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
