[package]
name = "ci"
version = "0.1.0"
edition = "2021"
authors = ["GameEngine Team"]
license = "MIT OR Apache-2.0"

[workspace]

[[bin]]
name = "ci"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# 测试目录重命名为 unit_tests，避免与 CI 规则中的 tests 目录冲突
[[test]]
name = "integration"
path = "unit_tests/integration_test.rs"

[[test]]
name = "impl_file_test"
path = "unit_tests/impl_file_test.rs"

[[test]]
name = "mod_rs_test"
path = "unit_tests/mod_rs_test.rs"

[[test]]
name = "naming_test"
path = "unit_tests/naming_test.rs"

[[test]]
name = "parser_test"
path = "unit_tests/parser_test.rs"

[[test]]
name = "tests_test"
path = "unit_tests/tests_test.rs"

[[test]]
name = "internal_test"
path = "unit_tests/internal_test.rs"

[[test]]
name = "fixer_test"
path = "unit_tests/fixer_test.rs"

[dependencies]
# CLI 工具
clap = { version = "4.4", features = ["derive"] }

# 错误处理
anyhow = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 文件系统遍历
walkdir = "2.4"

# Rust 代码解析
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit", "visit-mut"] }
proc-macro2 = "1.0"
# tree-sitter = "0.20"          # 暂时禁用
# tree-sitter-rust = "0.21"     # 暂时禁用

# 并行处理
rayon = "1.7"

# 锁（用于缓存）
parking_lot = "0.12"

# 路径处理
pathdiff = "0.2"
glob = "0.3"

# 正则表达式
regex = "1.10"

# 输出格式化
colored = "2.1"

[dev-dependencies]
# 测试工具
tempfile = "3.8"
