[package]
name = "engine-app"
version = "0.1.0"
edition = "2021"
authors = ["Your Team"]
description = "ToyEngine 应用层：winit 事件循环与运行时执行流"
license = "MIT OR Apache-2.0"

[dependencies]
engine-core = { path = "../engine-core" }
engine-renderer = { path = "../engine-renderer" }
engine-physics = { path = "../engine-physics" }
engine-scene = { path = "../engine-scene" }
engine-platform = { path = "../engine-platform" }

bevy_ecs = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
wasmer = { version = "4", features = ["cranelift"] }
glam = { workspace = true }
rfd = "0.15"
egui = "0.33"

