[package]
name = "engine-events"
version = "0.1.0"
edition = "2021"
authors = ["Your Team"]
description = "ToyEngine 事件系统"
license = "MIT OR Apache-2.0"

[dependencies]
# 核心依赖
bevy_ecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
bincode = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
