[package]
name = "engine-platform"
version = "0.1.0"
edition = "2021"
description = "ToyEngine 平台抽象层：输入、配置、窗口"

[dependencies]
# 核心
bevy_ecs = { workspace = true }

# 平台层
winit = { workspace = true }
raw-window-handle = { workspace = true }

# 序列化
serde = { workspace = true }
toml = "0.8"

# 错误处理
thiserror = "2"

# 其他
tracing = { workspace = true }
